Addewd routes for counting and changed file structure.
